# erpnext-biometric-sync

./: .gitignore  README.md  erpnext_sync.py  local_config.py.template  pyproject.toml  requirements.txt  test_erpnext_api.py  test_erpnext_api_open.py  test_erpnext_api_prompt.py  test_erpnext_biometric.py
