[tool.poetry]
name = "erpnext-biometric-tests"
version = "0.1.0"
description = "ERPNext Biometric API Testing Suite"
authors = ["Manot Luijiu <moocoding@gmail.com>"]
readme = "README.md"
packages = [{include = "erpnext_biometric_tests"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
loguru = "^0.7.2"
pickledb = "^0.9.2"
pyzk = "^0.9"
PyQt5 = "^5.15.9"
pywhatkit = "^5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-erpnext-biometric = "erpnext_biometric_tests.main:main"

# Development configurations
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

# Additional project metadata
[tool.poetry.urls]
"Homepage" = "https://github.com/yourusername/erpnext-tests"
"Bug Tracker" = "https://github.com/yourusername/erpnext-tests/issues"

# Code formatting configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3